# ezekit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.css
frontend/src/api/: client.js
frontend/src/components/: AutoDetectModal.jsx  CharsetEditor.jsx  CharsetPanel.jsx  CropEditor.jsx  CropList.jsx  CropOverlay.jsx  ExportModal.jsx  NewProjectModal.jsx  PageView.jsx  ProjectCard.jsx
frontend/src/hooks/: useAutoSave.js  useShortcuts.js
frontend/src/pages/: AnnotationPage.jsx  ProjectsPage.jsx  SettingsPage.jsx
frontend/src/utils/: crop.js
src/ezekit/: __init__.py  __main__.py  cli.py
src/ezekit/core/: db.py  module_loader.py  paths.py  server.py
src/ezekit/modules/ocr/: api.py  cli.py  crop_handler.py  export.py  line_detector.py  models.py  pdf_handler.py
